k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gregflix-client
  namespace: gregflix
  labels:
    app.kubernetes.io/name: gregflix-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gregflix-client
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gregflix-client
    spec:
      containers:
        - name: gregflix-client
          image: registry.home.arpa/gregflix/gregflix-client:dev
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
