k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gregflix-client
  namespace: gregflix
  labels:
    app.kubernetes.io/name: gregflix-client
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gregflix-client
  ports:
    - name: http
      port: 80
      targetPort: http
