k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gregflix-client
  namespace: gregflix
spec:
  ingressClassName: traefik
  rules:
    - host: gregflix.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gregflix-client
                port:
                  name: http
